public interface IAbono {
    boolean abonar(double monto);
}