public interface IInteres {
    void generarIntereses();
    double getPorcentajeInteres();
    void setPorcentajeInteres(double porcentaje);
}